cmake_minimum_required(VERSION 3.5.1)
project(cpp_practice)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_practice
        basics/class.cpp
        basics/class_inherit.cpp
        basics/dynamic_ram.cpp
        basics/first.cpp
        basics/friend_class_func.cpp
        basics/template.cpp
        basics/test.cpp
        basics/initialize_list.cpp)

        